# fxpmath

./: .pre-commit-config.yaml  flake.nix  pyproject.toml
